--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
